fix: content 말고 nav의 z-index를 변경

--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -125,7 +125,7 @@ a {
   overflow: scroll;
   padding: 0.5rem;
   position: relative;
-  z-index: 1;
+  z-index: 0;
 }
 
 .calendar {
